# audiofollow

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
audiofollow/: cli.py  config.py  daemon.py  pipewire.py  utils.py
audiofollow/data/: config.example.yaml
kwin_script/: metadata.json
kwin_script/contents/code/: main.js
resources/packaging/arch/: PKGBUILD  pacman-hooks.install
resources/systemd/: unit.service
tests/: test_pipewire.py
