[project]
name = "audiofollow"
description = "Move an app's PipeWire audio stream to match the monitor its window is on (KDE Plasma / Wayland)"
author = ["Leonardo"]
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "dbus-fast>=5.0.0",
    "rich>=15.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "audiofollow/__init__.py"

[project.scripts]
audiofollow = "audiofollow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["audiofollow"]

[tool.hatch.build.targets.wheel]
packages = ["audiofollow"]
include = ["audiofollow/data/*"]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
audiofollow = { workspace = true }
